--- a/csy1018/assign1/contact.html
+++ b/csy1018/assign1/contact.html
@@ -3,8 +3,11 @@
 <html>
 <head>
   <!--for icons-->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet">
   <meta charset="utf-8">
+  <!--google webfont API-->
+  <link href="https://fonts.googleapis.com/css?family=Taviraj" rel="stylesheet">
   <title>Contact</title>
   <link rel="stylesheet" type="text/css" href="css/file.css"><!--insert css file to the current html file-->
 </head>
@@ -34,30 +37,24 @@
   <input type="email" id="email" name="email" placeholder="mary@g.gr"> <br>
   <label for="subject">Subject</label> <br>
   <input type="text" id="subject" name="subject" placeholder="subject"> <br>
-  <label for="textarea">Your Message</label> <br>
-  <textarea placeholder="Write your text.."></textarea> <br>
-  <label for="submit">Send Your Email</label> <br>
-  <input type="submit" value="SendEmail">
+    <textarea placeholder="Write your text.."></textarea> <br>
+    <input type="submit" value="SendEmail">
 </form>
 <!--end of contact boxes-->
 <!--icons and anchor-->
 <h3>Another way to contact  :</h3>
-<P> My mobile phone : <i class="material-icons">&#xe324;</i> <a href="tel:00306912345678">00306912345678</a></p>
-<p> You can send email : <i style="font-size:20px" class="fa">&#xf003;</i> <a href="mailto:mary@smith">mary@smith.gr</a></p>
-<p> I would like to discuss with you in the Facebook : <i style="font-size:24px" class="fa">&#xf082; </i> <a href="facebook:marysmithfb">marysmithfb</a></p>
-<p> You can see my project here : <i style="font-size:20px" class="fa">&#xf092;</i> <a href="github:marysmithgit">marysmithgit"</a></p>
+<P> My mobile phone : <i class="material-icons">stay_current_portrait</i> <a href="tel:00306912345678">00306912345678</a></p>
+<p> You can send email : <i class="material-icons">email</i> <a href="mailto:mary@smith">mary@smith.gr</a></p>
+<p> I would like to discuss with you in the Facebook : <i class="material-icons">face</i> <a href="facebook:marysmithfb">marysmithfb</a></p>
+<p> You can see my project here : <i class="material-icons">cloud_queue</i> <a href="github:marysmithgit">marysmithgit</a></p>
 <!--footer ul-->
 <footer>
 <!--icons-->
 <h3>You can find me : </h3>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<P> <i class="material-icons">&#xe324;</i> <a href="tel:00306912345678">00306912345678</a></p>
-<p> <i style="font-size:20px" class="fa">&#xf003;</i> <a href="mailto:mary@smith">mary@smith.gr</a></p>
-<p> <i style="font-size:24px" class="fa">&#xf082; </i> <a href="facebook:marysmithfb">marysmithfb</a></p>
-<p> <i style="font-size:20px" class="fa">&#xf092;</i> <a href="github:marysmithgit">marysmithgit"</a></p>
+<P> <i class="material-icons">stay_current_portrait</i> <a href="tel:00306912345678">00306912345678</a></p>
+<p> <i class="material-icons">email</i> <a href="mailto:mary@smith">mary@smith.gr</a></p>
+<p> <i class="material-icons">face</i> <a href="facebook:marysmithfb">marysmithfb</a></p>
+<p><i class="material-icons">cloud_queue</i> <a href="github:marysmithgit">marysmithgit</a></p>
 <!--end of icons-->
 <!--copuright-->
 <p class="copuright">Copuright Mary Smith 2016</p>
