--- a/csy1018/assign1/intex.html
+++ b/csy1018/assign1/intex.html
@@ -3,8 +3,11 @@
 <html>
 <head>
   <!--for icon-->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+   rel="stylesheet">
   <meta charset="utf-8">
+  <!--google webfont API-->
+  <link href="https://fonts.googleapis.com/css?family=Taviraj" rel="stylesheet">
   <title>Home</title>
   <link rel="stylesheet" type="text/css" href="css/file.css"><!--insert css dile to the current htm file-->
  </head>
@@ -23,15 +26,15 @@
 <!--end of header-->
 <!--book image center-->
 <div class="container">
-<img class="book" src="images/photoshop-interface-1834294_1280.jpg">
+<img class="book" src="images/photoshop-interface-1834294_1280.jpg" alt="book">
 <div class="bottomright">Design Books</div> </div>
 <!--end of image books center-->
 <!--Gallery images-->
 <div class="stackofbooks">
-<a href="resume.html"><img src="images/stack-of-books-1001655__180.jpg"></a>
+<a href="resume.html"><img src="images/stack-of-books-1001655__180.jpg" alt="stack"></a>
 <div class="description"><a href="resume.html">My Resume</a></div></div>
 <div class="oldbooks">
-<a href="bio.html"><img src="images/old-books-436498__180.jpg"></a>
+<a href="bio.html"><img src="images/old-books-436498__180.jpg" alt="oldbooks"></a>
 <div class="descr"><a href="bio.html">Biography</a></div></div>
 <!--end of gallery images-->
 <!--box with anchor-->
@@ -40,14 +43,10 @@
 <footer>
   <h4>You can find me : </h4>
 <!--icons-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <P> <i class="material-icons">&#xe324;</i> <a href="tel:00306912345678">00306912345678</a></p>
-  <p> <i style="font-size:20px" class="fa">&#xf003;</i> <a href="mailto:mary@smith">mary@smith.gr</a></p>
-  <p> <i style="font-size:24px" class="fa">&#xf082; </i> <a href="facebook:marysmithfb">marysmithfb</a></p>
-  <p> <i style="font-size:20px" class="fa">&#xf092;</i> <a href="github:marysmithgit">marysmithgit"</a></p>
+  <P> <i class="material-icons">stay_current_portrait</i> <a href="tel:00306912345678">00306912345678</a></p>
+  <p> <i class="material-icons">email</i> <a href="mailto:mary@smith">mary@smith.gr</a></p>
+  <p> <i class="material-icons">face</i> <a href="facebook:marysmithfb">marysmithfb</a></p>
+  <p><i class="material-icons">cloud_queue</i> <a href="github:marysmithgit">marysmithgit"</a></p>
   <!--end of icons-->
   <!--copuright-->
   <p class="copuright">Copuright Mary Smith 2016</p>
