--- a/csy1018/assign1/resume.html
+++ b/csy1018/assign1/resume.html
@@ -3,8 +3,10 @@
 <html>
 <head>
   <!--for icons-->
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <meta charset="utf-8">
+<!--google webfont API-->
+ <link href="https://fonts.googleapis.com/css?family=Taviraj" rel="stylesheet">
 <title>My Resume</title>
 <link rel="stylesheet" type="text/css" href="css/file.css"><!--insert the css file to the current html file-->
 </head>
@@ -42,14 +44,10 @@
 <footer>
   <!--icons and anchor-->
   <h4>You can find me : </h4>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <P> <i class="material-icons">&#xe324;</i> <a href="tel:00306912345678">00306912345678</a></p>
-  <p> <i style="font-size:20px" class="fa">&#xf003;</i> <a href="mailto:mary@smith">mary@smith.gr</a></p>
-  <p> <i style="font-size:24px" class="fa">&#xf082; </i> <a href="facebook:marysmithfb">marysmithfb</a></p>
-  <p> <i style="font-size:20px" class="fa">&#xf092;</i> <a href="github:marysmithgit">marysmithgit"</a></p></ul>
+  <P> <i class="material-icons">stay_current_portrait</i> <a href="tel:00306912345678">00306912345678</a></p>
+  <p> <i class="material-icons">email</i> <a href="mailto:mary@smith">mary@smith.gr</a></p>
+  <p> <i class="material-icons">face</i> <a href="facebook:marysmithfb">marysmithfb</a></p>
+  <p> <i class="material-icons">cloud_queue</i> <a href="github:marysmithgit">marysmithgit"</a></p>
   <!--copuright-->
   <p class="copuright">Copuright Mary Smith 2016</p>
 </footer>
