few last changes

--- a/csy1018/assign1/contact.html
+++ b/csy1018/assign1/contact.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" type="text/css" href="css/file.css"><!--insert css file to the current html file-->
 </head>
 <body>
+<!--header-->
 <header>
  <h1>Mary Smith</h1>
 <!--ul with anchor-->
@@ -37,8 +38,8 @@
   <input type="email" id="email" name="email" placeholder="mary@g.gr"> <br>
   <label for="subject">Subject</label> <br>
   <input type="text" id="subject" name="subject" placeholder="subject"> <br>
-    <textarea placeholder="Write your text.."></textarea> <br>
-    <input type="submit" value="SendEmail">
+  <textarea placeholder="Write your text.."></textarea> <br>
+  <input type="submit" value="SendEmail">
 </form>
 <!--end of contact boxes-->
 <!--icons and anchor-->
@@ -47,7 +48,7 @@
 <p> You can send email : <i class="material-icons">email</i> <a href="mailto:mary@smith">mary@smith.gr</a></p>
 <p> I would like to discuss with you in the Facebook : <i class="material-icons">face</i> <a href="facebook:marysmithfb">marysmithfb</a></p>
 <p> You can see my project here : <i class="material-icons">cloud_queue</i> <a href="github:marysmithgit">marysmithgit</a></p>
-<!--footer ul-->
+<!--footer-->
 <footer>
 <!--icons-->
 <h3>You can find me : </h3>
