--- a/csy1018/assign1/intex.html
+++ b/csy1018/assign1/intex.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" type="text/css" href="css/file.css"><!--insert css dile to the current htm file-->
  </head>
 <body>
+<!--header-->
 <header>
  <h1>Mary Smith</h1>
 <!--ul with anchor-->
@@ -40,16 +41,18 @@
 <!--box with anchor-->
 <div class="fotobox">Welcome to my page, I am very glad you are here. <a href="contact.html">Contact</a> with me if you want to. I am looking forward to hearing from you. </div>
 <!--end of box with anchor-->
+<!--footer-->
 <footer>
   <h4>You can find me : </h4>
 <!--icons-->
   <P> <i class="material-icons">stay_current_portrait</i> <a href="tel:00306912345678">00306912345678</a></p>
   <p> <i class="material-icons">email</i> <a href="mailto:mary@smith">mary@smith.gr</a></p>
   <p> <i class="material-icons">face</i> <a href="facebook:marysmithfb">marysmithfb</a></p>
-  <p><i class="material-icons">cloud_queue</i> <a href="github:marysmithgit">marysmithgit"</a></p>
+  <p><i class="material-icons">cloud_queue</i> <a href="github:marysmithgit">marysmithgit</a></p>
   <!--end of icons-->
   <!--copuright-->
   <p class="copuright">Copuright Mary Smith 2016</p>
 </footer>
+<!--end of footer-->
 </body>
 </html>
