--- a/csy1018/assign1/resume.html
+++ b/csy1018/assign1/resume.html
@@ -3,26 +3,28 @@
 <html>
 <head>
   <!--for icons-->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <meta charset="utf-8">
 <!--google webfont API-->
- <link href="https://fonts.googleapis.com/css?family=Taviraj" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Taviraj" rel="stylesheet">
 <title>My Resume</title>
 <link rel="stylesheet" type="text/css" href="css/file.css"><!--insert the css file to the current html file-->
 </head>
 <body>
+<!--header-->
 <header>
   <h1>Mary Smith</h1>
 <!--ul with anchor-->
 <ul class="a">
-<li><a href="contact.html">Contact</a></li>
-<li><a href="bio.html">Biography</a></li>
-<li><a href="resume.html">Resume</a></li>
-<li><a href="intex.html">Home</a></li>
+ <li><a href="contact.html">Contact</a></li>
+ <li><a href="bio.html">Biography</a></li>
+ <li><a href="resume.html">Resume</a></li>
+ <li><a href="intex.html">Home</a></li>
 </ul>
 <!--end of ul with anchor-->
 </header>
- <h2>My Resume!</h2>
+<!--end of header-->
+<h2>My Resume!</h2>
 <p>I love programming and the web pages, from young age i experience in web development, it is a magic world an i learn to know more and more! The university of Northampton helps to improve my knownledge and skills.</p>
 <p>The problems exist all over in our daily worid, but we are here to find solutions. I am interest in problem solving and i coperate with my collegues to share ideas and solve problem all together. I believe in group power!</p>
 <h3> Education</h3>
@@ -47,10 +49,10 @@
   <P> <i class="material-icons">stay_current_portrait</i> <a href="tel:00306912345678">00306912345678</a></p>
   <p> <i class="material-icons">email</i> <a href="mailto:mary@smith">mary@smith.gr</a></p>
   <p> <i class="material-icons">face</i> <a href="facebook:marysmithfb">marysmithfb</a></p>
-  <p> <i class="material-icons">cloud_queue</i> <a href="github:marysmithgit">marysmithgit"</a></p>
+  <p> <i class="material-icons">cloud_queue</i> <a href="github:marysmithgit">marysmithgit</a></p>
   <!--copuright-->
   <p class="copuright">Copuright Mary Smith 2016</p>
 </footer>
-<!--end of footer-->S
+<!--end of footer-->
 </body>
 </html>
