--- a/csy1018/assign1/contact.html
+++ b/csy1018/assign1/contact.html
@@ -20,7 +20,7 @@
 <li><a href="contact.html">Contact</a></li>
 <li><a href="bio.html">Biography</a></li>
 <li><a href="resume.html">Resume</a></li>
-<li><a href="intex.html">Home</a></li>
+<li><a href="index.html">Home</a></li>
 </ul>
 <!--end of ul-->
 </header>
