--- a/csy1018/assign1/resume.html
+++ b/csy1018/assign1/resume.html
@@ -19,7 +19,7 @@
  <li><a href="contact.html">Contact</a></li>
  <li><a href="bio.html">Biography</a></li>
  <li><a href="resume.html">Resume</a></li>
- <li><a href="intex.html">Home</a></li>
+ <li><a href="index.html">Home</a></li>
 </ul>
 <!--end of ul with anchor-->
 </header>
