--- a/csy1018/assign1/contact.html
+++ b/csy1018/assign1/contact.html
@@ -16,12 +16,12 @@
 <header>
  <h1>Mary Smith</h1>
 <!--ul with anchor-->
-<ul class="a">
+<nav> <ul class="a">
 <li><a href="contact.html">Contact</a></li>
 <li><a href="bio.html">Biography</a></li>
 <li><a href="resume.html">Resume</a></li>
 <li><a href="index.html">Home</a></li>
-</ul>
+</ul> </nav>
 <!--end of ul-->
 </header>
 <!--end of header-->
