--- a/csy1018/assign1/resume.html
+++ b/csy1018/assign1/resume.html
@@ -15,12 +15,12 @@
 <header>
   <h1>Mary Smith</h1>
 <!--ul with anchor-->
-<ul class="a">
- <li><a href="contact.html">Contact</a></li>
- <li><a href="bio.html">Biography</a></li>
- <li><a href="resume.html">Resume</a></li>
- <li><a href="index.html">Home</a></li>
-</ul>
+<nav> <ul class="a">
+  <li><a href="contact.html">Contact</a></li>
+  <li><a href="bio.html">Biography</a></li>
+  <li><a href="resume.html">Resume</a></li>
+  <li><a href="index.html">Home</a></li>
+</ul> </nav>
 <!--end of ul with anchor-->
 </header>
 <!--end of header-->
