--- a/csy1018/assign1/cv.html
+++ b/csy1018/assign1/cv.html
@@ -7,7 +7,7 @@
 <meta charset="utf-8">
 <!--google webfont API-->
 <link href="https://fonts.googleapis.com/css?family=Taviraj" rel="stylesheet">
-<title>My Resume</title>
+<title>Cv</title>
 <link rel="stylesheet" type="text/css" href="css/file.css"><!--insert the css file to the current html file-->
 </head>
 <body>
@@ -18,7 +18,7 @@
 <nav> <ul class="a">
   <li><a href="contact.html">Contact</a></li>
   <li><a href="bio.html">Biography</a></li>
-  <li><a href="resume.html">Resume</a></li>
+  <li><a href="cv.html">Cv</a></li>
   <li><a href="index.html">Home</a></li>
 </ul> </nav>
 <!--end of ul with anchor-->
