--- a/csy1018/assign1/index.html
+++ b/csy1018/assign1/index.html
@@ -19,7 +19,7 @@
 <nav> <ul class="a">
  <li><a href="contact.html">Contact</a></li>
  <li><a href="bio.html">Biography</a></li>
- <li><a href="resume.html">Resume</a></li>
+ <li><a href="cv.html">Cv</a></li>
  <li><a href="index.html">Home</a></li>
 </ul> </nav>
 <!--end of ul-->
@@ -32,11 +32,12 @@
 <!--end of image books center-->
 <!--Gallery images-->
 <div class="stackofbooks">
-<a href="resume.html"><img src="images/stack-of-books-1001655__180.jpg" alt="stack"></a>
-<div class="description"><a href="resume.html">My Resume</a></div></div>
+<a href="cv.html"><img src="images/stack-of-books-1001655__180.jpg" alt="stack"></a>
+<div class="description"><a href="cv.html">My Cv</a></div></div>
 <div class="oldbooks">
 <a href="bio.html"><img src="images/old-books-436498__180.jpg" alt="oldbooks"></a>
 <div class="descr"><a href="bio.html">Biography</a></div></div>
+<!--the div here are for galery image and description of photos.inspired from w3sckolls-->
 <!--end of gallery images-->
 <!--box with anchor-->
 <div class="fotobox">Welcome to my page, I am very glad you are here. <a href="contact.html">Contact</a> with me if you want to. I am looking forward to hearing from you. </div>
