--- a/csy1018/assign1/contact.html
+++ b/csy1018/assign1/contact.html
@@ -19,7 +19,7 @@
 <nav> <ul class="a">
 <li><a href="contact.html">Contact</a></li>
 <li><a href="bio.html">Biography</a></li>
-<li><a href="resume.html">Resume</a></li>
+<li><a href="cv.html">Cv</a></li>
 <li><a href="index.html">Home</a></li>
 </ul> </nav>
 <!--end of ul-->
