--- a/csy1018-assign1/contact.html
+++ b/csy1018-assign1/contact.html
@@ -51,11 +51,12 @@
 <!--footer-->
 <footer>
 <!--icons-->
-<h3>You can find me : </h3>
-<P> <i class="material-icons">stay_current_portrait</i> <a href="tel:00306912345678">00306912345678</a></p>
-<p> <i class="material-icons">email</i> <a href="mailto:mary@smith">mary@smith.gr</a></p>
-<p> <i class="material-icons">face</i> <a href="facebook:marysmithfb">marysmithfb</a></p>
-<p><i class="material-icons">cloud_queue</i> <a href="github:marysmithgit">marysmithgit</a></p>
+<h4>You can find me : </h4>
+<div class="flex-container">
+<div class="flex-item"><i class="material-icons">stay_current_portrait</i> <a href="tel:00306912345678">00306912345678</a></div>
+<div class="flex-item"><i class="material-icons">email</i> <a href="mailto:mary@smith">mary@smith.gr</a></div>
+<div class="flex-item"><i class="material-icons">face</i> <a href="facebook:marysmithfb">marysmithfb</a></div>
+<div class="flex-item"><i class="material-icons">cloud_queue</i> <a href="github:marysmithgit">marysmithgit</a></div></div>
 <!--end of icons-->
 <!--copuright-->
 <p class="copuright">Copuright Mary Smith 2016</p>
