--- a/csy1018-assign1/contact.html
+++ b/csy1018-assign1/contact.html
@@ -14,7 +14,7 @@
 <body>
 <!--header-->
 <header>
- <h1>Mary Smith</h1>
+ <h1><a href="index.html"><img src="images/mylogo.jpg" alt="logo"></a>Mary Smith</h1>
 <!--ul with anchor-->
 <nav> <ul class="a">
 <li><a href="contact.html">Contact</a></li>
