--- a/csy1018-assign1/index.html
+++ b/csy1018-assign1/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
   <!--for icon-->
+  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
    rel="stylesheet">
   <meta charset="utf-8">
@@ -14,15 +15,15 @@
 <body>
 <!--header-->
 <header>
- <h1><a href="index.html"><img src="images/mylogo.jpg" alt="logo"></a>Mary Smith</h1>
-<!--ul with anchor-->
-<nav> <ul class="a">
- <li><a href="contact.html">Contact</a></li>
- <li><a href="bio.html">Biography</a></li>
- <li><a href="cv.html">Cv</a></li>
- <li><a href="index.html">Home</a></li>
+ <h1><a href="index.html"><img src="images/mylogo.jpg" alt="logo"></a>Mary Smith</h1><!--mylogo-->
+<!--navbar-->
+<nav> <ul class="a"><!--ul with anchor-->
+ <li><a href="contact.html">Contact</a></li><!--anchor for contact-->
+ <li><a href="bio.html">Biography</a></li><!--anchor for biography-->
+ <li><a href="cv.html">Cv</a></li><!--anchor for cv-->
+ <li><a href="index.html">Home</a></li><!--anchor for contact-->
 </ul> </nav>
-<!--end of ul-->
+<!--end of ul--><!--end of navbar-->
 </header>
 <!--end of header-->
 <!--book image center-->
