add a few comments

--- a/csy1018-assign1/contact.html
+++ b/csy1018-assign1/contact.html
@@ -2,13 +2,12 @@
 <!--Alexandra Proxenia,student_number 17419237-->
 <html>
 <head>
-  <!--for icons-->
-  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png"><!--favicon-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    rel="stylesheet">
+    rel="stylesheet"><!--for icons-->
   <meta charset="utf-8">
   <!--google webfont API-->
-  <link href="https://fonts.googleapis.com/css?family=Taviraj" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Taviraj" rel="stylesheet"><!--the font which is used-->
   <title>Contact</title>
   <link rel="stylesheet" type="text/css" href="css/file.css"><!--insert css file to the current html file-->
 </head>
@@ -18,10 +17,10 @@
  <h1><a href="index.html"><img src="images/mylogo.jpg" alt="logo"></a>Mary Smith</h1><!--mylogo-->
 <!--ul with anchor-->
 <nav> <ul class="a">
-<li><a href="contact.html">Contact</a></li>
-<li><a href="bio.html">Biography</a></li>
-<li><a href="cv.html">Cv</a></li>
-<li><a href="index.html">Home</a></li>
+ <li><a href="contact.html">Contact</a></li>
+ <li><a href="bio.html">Biography</a></li>
+ <li><a href="cv.html">Cv</a></li>
+ <li><a href="index.html">Home</a></li>
 </ul> </nav>
 <!--end of ul-->
 </header>
@@ -31,38 +30,38 @@
 <h3>Send an Email :</h3>
 <!--contact boxes-->
 <form>
-  <label for="fname">First Name</label> <br>
-  <input type="text" id="fname" name="fname" placeholder="First Name"> <br>
-  <label for="sname">Family Name</label> <br>
-  <input type="text" id="sname" name="sname" placeholder="Family Name"> <br>
-  <label for="email">Email</label> <br>
-  <input type="email" id="email" name="email" placeholder="mary@g.gr"> <br>
-  <label for="subject">Subject</label> <br>
-  <input type="text" id="subject" name="subject" placeholder="subject"> <br>
-  <textarea placeholder="Write your text.."></textarea> <br>
-  <input type="submit" value="SendEmail">
+  <label for="fname">First Name</label> <br><!--labelname of form-->
+  <input type="text" id="fname" name="fname" placeholder="First Name"> <br><!--the current text explain to us that in this form wait our first name and the type of form is text-->
+  <label for="sname">Family Name</label> <br><!--label name of form-->
+  <input type="text" id="sname" name="sname" placeholder="Family Name"> <br><!--the current text in form explain to us that in this form wait our family name and the type of form text-->
+  <label for="email">Email</label> <br><!--label name of form-->
+  <input type="email" id="email" name="email" placeholder="mary@g.gr"> <br><!--the current text in form explain to us that in this form wait our email address and the type of formtext here is email address-->
+  <label for="subject">Subject</label> <br><!--label of form-->
+  <input type="text" id="subject" name="subject" placeholder="subject"> <br><!--the current text in form explain to us that in this form wait the sublect of our discuss and the type of form text-->
+  <textarea placeholder="Write your text.."></textarea> <br><!--in this form we can write a bigger text-->
+  <input type="submit" value="SendEmail"><!--the submittion form wait to submit our email to the right person-->
 </form>
 <!--end of contact boxes-->
 <!--icons and anchor-->
-<h3>Another way to contact  :</h3>
-<P> My mobile phone : <i class="material-icons">stay_current_portrait</i> <a href="tel:00306912345678">00306912345678</a></p>
-<p> You can send email : <i class="material-icons">email</i> <a href="mailto:mary@smith">mary@smith.gr</a></p>
-<p> I would like to discuss with you in the Facebook : <i class="material-icons">face</i> <a href="facebook:marysmithfb">marysmithfb</a></p>
-<p> You can see my project here : <i class="material-icons">cloud_queue</i> <a href="github:marysmithgit">marysmithgit</a></p>
+<h3>Another way to contact  :</h3><!--tittle-->
+<P> My mobile phone : <i class="material-icons">stay_current_portrait</i> <a href="tel:00306912345678">00306912345678</a></p><!--here is an anchor,we can call this number for further informations-it is not real-->
+<p> You can send email : <i class="material-icons">email</i> <a href="mailto:mary@smith">mary@smith.gr</a></p><!--here an anchor with email address which we can sen our mails-it is not real-->
+<p> I would like to discuss with you in the Facebook : <i class="material-icons">face</i> <a href="facebook:marysmithfb">marysmithfb</a></p><!--here is the anchor address for facebook-it is not real-->
+<p> You can see my project here : <i class="material-icons">cloud_queue</i> <a href="github:marysmithgit">marysmithgit</a></p><!--here is an anchor to git and we can use to contact with mary-it is not real-->
 <!--footer-->
 <footer>
-<!--icons-->
-<h4>You can find me : </h4>
-<div class="flex-container">
-<div class="flex-item"><i class="material-icons">stay_current_portrait</i> <a href="tel:00306912345678">00306912345678</a></div>
-<div class="flex-item"><i class="material-icons">email</i> <a href="mailto:mary@smith">mary@smith.gr</a></div>
-<div class="flex-item"><i class="material-icons">face</i> <a href="facebook:marysmithfb">marysmithfb</a></div>
-<div class="flex-item"><i class="material-icons">cloud_queue</i> <a href="github:marysmithgit">marysmithgit</a></div></div>
+
+<h4>You can find me : </h4><!--title of footer-->
+<div class="flex-container"><!--the flexbox class whitch contains the flex-item classes--><!--icons and anchors-->
+<div class="flex-item"><i class="material-icons">stay_current_portrait</i> <a href="tel:00306912345678">00306912345678</a></div><!--here is a mobile icon and an anchor,we can call this number for further informations-it is not real-->
+<div class="flex-item"><i class="material-icons">email</i> <a href="mailto:mary@smith">mary@smith.gr</a></div><!--here is an envelope icon and an anchor with email address which we can sen our mails-it is not real-->
+<div class="flex-item"><i class="material-icons">face</i> <a href="facebook:marysmithfb">marysmithfb</a></div><!--here is a face icon for facebook contact and the anchor address for facebook-it is not real-->
+<div class="flex-item"><i class="material-icons">cloud_queue</i> <a href="github:marysmithgit">marysmithgit</a></div></div><!--here is a cloud icon for git which is anchor and we can use to contact with mary-it is not real-->
 <!--end of icons-->
-<!--copuright-->
+<!--copuright class-->
 <p class="copyright">Copyright Mary Smith 2016</p>
 <!--end of copuright-->
 </footer>
 <!--end of footer-->
-</body>
+</body><!--end of body-->
 </html>
