--- a/csy1018-assign1/index.html
+++ b/csy1018-assign1/index.html
@@ -2,13 +2,12 @@
 <!--Alexandra Proxenia,student_number 17419237-->
 <html>
 <head>
-  <!--for icon-->
-  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png"><!--favicon-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-   rel="stylesheet">
+   rel="stylesheet"><!--for icons-->
   <meta charset="utf-8">
   <!--google webfont API-->
-  <link href="https://fonts.googleapis.com/css?family=Taviraj" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Taviraj" rel="stylesheet"><!--the font which is used-->
   <title>Home</title>
   <link rel="stylesheet" type="text/css" href="css/file.css"><!--insert css dile to the current htm file-->
  </head>
@@ -45,17 +44,16 @@
 <!--end of box with anchor-->
 <!--footer-->
 <footer>
-  <h4>You can find me : </h4>
-  <div class="flex-container">
-<!--icons-->
+  <h4>You can find me : </h4><!--title of footer-->
+  <div class="flex-container"><!--the flexbox class whitch contains the flex-item clasees--><!--icons and anchors-->
   <div class="flex-item"><i class="material-icons">stay_current_portrait</i> <a href="tel:00306912345678">00306912345678</a></div>
   <div class="flex-item"><i class="material-icons">email</i> <a href="mailto:mary@smith">mary@smith.gr</a></div>
   <div class="flex-item"><i class="material-icons">face</i> <a href="facebook:marysmithfb">marysmithfb</a></div>
   <div class="flex-item"><i class="material-icons">cloud_queue</i> <a href="github:marysmithgit">marysmithgit</a></div></div>
   <!--end of icons-->
-  <!--copuright-->
+  <!--copuright class-->
   <p class="copyright">Copyright Mary Smith 2016</p>
 </footer>
 <!--end of footer-->
-</body>
+</body><!--end of body-->
 </html>
