--- a/csy1018-assign1/cv.html
+++ b/csy1018-assign1/cv.html
@@ -2,10 +2,9 @@
 <!--Alexandra Proxenia, student_number 17419237-->
 <html>
 <head>
-  <!--for icons-->
-<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<meta charset="utf-8">
+<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png"><!--favicon-->
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"><!--the font which is used-->
+<meta charset="utf-8"><!--for icons-->
 <!--google webfont API-->
 <link href="https://fonts.googleapis.com/css?family=Taviraj" rel="stylesheet">
 <title>Cv</title>
@@ -45,16 +44,16 @@
  <!--end of ul-->
  <!--footer-->
 <footer>
-  <!--icons and anchor-->
-  <h4>You can find me : </h4>
-  <div class="flex-container">
-  <div class="flex-item"><i class="material-icons">stay_current_portrait</i> <a href="tel:00306912345678">00306912345678</a></div>
-  <div class="flex-item"><i class="material-icons">email</i> <a href="mailto:mary@smith">mary@smith.gr</a></diV>
-  <div class="flex-item"><i class="material-icons">face</i> <a href="facebook:marysmithfb">marysmithfb</a></div>
-  <div class="flex-item"><i class="material-icons">cloud_queue</i> <a href="github:marysmithgit">marysmithgit</a></div></div>
-  <!--copuright-->
+
+  <h4>You can find me : </h4><!--title of footer-->
+  <div class="flex-container"><!--the flexbox class whitch contains the flex-item clasees--><!--icons and anchor-->
+  <div class="flex-item"><i class="material-icons">stay_current_portrait</i> <a href="tel:00306912345678">00306912345678</a></div><!--here is a mobile icon and an anchor,we can call this number for further informations-it is not real-->
+  <div class="flex-item"><i class="material-icons">email</i> <a href="mailto:mary@smith">mary@smith.gr</a></diV><!--here is an envelope icon and an anchor with email address which we can sen our mails-it is not real-->
+  <div class="flex-item"><i class="material-icons">face</i> <a href="facebook:marysmithfb">marysmithfb</a></div><!--here is a face icon for facebook contact and the anchor address for facebook-it is not real-->
+  <div class="flex-item"><i class="material-icons">cloud_queue</i> <a href="github:marysmithgit">marysmithgit</a></div></div><!--here is a cloud icon for git which is anchor and we can use to contact with mary-it is not real-->
+  <!--copuright class-->
   <p class="copyright">Copyright Mary Smith 2016</p>
 </footer>
 <!--end of footer-->
-</body>
+</body><!--end of body-->
 </html>
